Change to faculty page

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
               <li><a href="https://www.facebook.com/tbp.epsilon.ucla/photos_stream">Photos</a></li>
               <li><a href="{% url 'web.views.awards' %}">Awards</a></li>
               <li><a href="{% url 'web.views.officers' %}">Contact Officers</a></li>
-              <li><a href="{% url 'web.views.faculty' %}">Faculty</a></li>
+              <li><a href="{% url 'web.views.faculty' %}">Advisors and Faculty</a></li>
               <li><a href="{% url 'web.views.sponsor' %}">Sponsors</a></li>
             </ul>
             </li>
