--- a/templates/faculty.html
+++ b/templates/faculty.html
@@ -3,7 +3,7 @@
 {% block title %}Faculty{% endblock %}
 
 {% block content %}
-<h1>Faculty</h1>
+<h1>Advisors and Faculty</h1>
 <div class="panel-group" id="accordion">
   {% for f in faculty %}
   <div class="panel panel-default">
