--- a/templates/all_candidate_requirements.html
+++ b/templates/all_candidate_requirements.html
@@ -10,7 +10,9 @@
           <form role="form" method="post">
             {% csrf_token %}
                 <select name="term">
-                    {% for t in terms %}
+                  <option value="{{dropdown_term.id}}">{{ dropdown_term }}</option>
+		  <option class="select-dash" disabled="disabled">----------</option>
+		  {% for t in terms %}
                     <option value="{{ t.id }}">{{ t }}</option>
                     {% endfor %}
                 </select>
