Added All Profiles page to Admin dropdown, renamed to spreadsheet view to all_profiles

--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -2,7 +2,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<a href="{% url 'main.views.spreadsheet' %}">Spreadsheet</a>
 <a href="{% url 'main.views.resumes_pdf' %}">Resumes (PDF)</a>
 <a href="{% url 'main.views.resumes_word' %}">Resumes (word)</a>
 {% endblock %}
+
+<!-- <a href="{% url 'main.views.spreadsheet' %}">Spreadsheet</a> Currently replaced with All Profiles View -->
