--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@
             <ul class="dropdown-menu">
               <li><a href="{% url 'main.views.candidates' %}">Candidates</a></li>
               <li><a href="{% url 'main.views.active_members' %}">Active Members</a></li>
+              <li><a href="{% url 'main.views.all_profiles' %}">All Profiles</a></li>
               <li><a href="{% url 'main.views.pending_community_service' %}">Pending Community Service</a></li>
               <li><a href="{% url 'main.views.tutoring_hours' %}">Tutoring Hours</a></li>
               <li><a href="{% url 'main.views.downloads' %}">Downloads</a></li>
