--- a/templates/schedule_snippet.html
+++ b/templates/schedule_snippet.html
@@ -10,7 +10,8 @@
 <script src="/static/js/tutor.js" type="text/javascript"></script><style></style>
 <h1>TBP {{ term }} Tutoring Schedule</h1>
 {% if not display %}
-  <p>Check back later!</p>
+  <p>Tutoring starts third week of every quarter. Unfortunately, our schedule is not ready for viewing
+  at this time. Please check back later!</p>
   {% else %}
   <div class="row">
     <div class="col-md-12">
