--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
     <link href="/favicon.ico" rel="shortcut icon">
+    {% block headContent %} {% endblock %}
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-static-top" role="navigation">
