--- a/templates/first_edit.html
+++ b/templates/first_edit.html
@@ -17,10 +17,10 @@
         {% include "form_snippet.html" with form=shirt_form %}
       </fieldset>
       <fieldset>
-        <legend>Peer Teaching Preference</legend>
+        <legend>Peer Teaching Track</legend>
 	{% include "form_snippet.html" with form=peer_teaching_form %}
 	<p class="help-block">Fill out the tutoring preferences below if you're signing up for tutoring.
-	  If you choose Academic Outreach, you'll receive an email with further instructions.
+	  If you choose Academic Outreach or EMCC, you'll receive an email with further instructions.
 	</p>
         {% include "form_snippet.html" with form=tutoring_form %}
         <p class="help-block">If you have any extenuating circumstances and cannot tutor during any of the options listed, please email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a>.</p>
