--- a/templates/add.html
+++ b/templates/add.html
@@ -9,7 +9,7 @@
     <form class="form-inline" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <legend>Add Classes</legend>
-      <p class="help-block">Please choose classes that you would be able to tutor, or classes that you would able to quickly refresh your knowledge about.
+      <p class="help-block">If you chose Tutoring as your Peer Teaching Track, please choose classes that you would be able to tutor, or classes that you would able to quickly refresh your knowledge about.
         Please email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a> if there are any classes that you can tutor and the department isn't listed.</p>
       {% if error %}
       <p class="has-error">{{ error }}</p>
